# Sirius

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
examples/: CMakeLists.txt
examples/basic-app/: App.hpp  Main.cpp  SiriusApp.cpp  demo.hpp  premake5.lua
include/Sirius/: application.hpp  layer.hpp  main.hpp
scripts/: glad.cmake  glfw.cmake  imgui.cmake  sdl2.cmake
src/: Application.cpp  Application.h  Main.h  Window.cpp  Window.h  WindowInfo.h  application.cpp  application.hpp  common.hpp  entrypoint.hpp  layer.hpp  window.cpp  window.hpp  window_info.hpp
src/backend/: vulkan_api.cpp  vulkan_api.hpp
